--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,100 @@
-.main{
-    margin: auto;
-    padding: 20px;
-    width: 60%;
-    border: 1px lightgrey dotted;
+.flex-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 2em;
+    padding: 2em;
+    flex-wrap: wrap;
+
 }
-.todolist{
-    list-style: none;
-    border: 1px grey dotted;
-    color: green;
-    font-weight: bold;
+.flex-item{
+    /* border: 1px solid grey; */
+    /* list-style: none; */
+}
+.flex-header{
+    color: rgb(255, 21, 0);
+    margin: 2em;
+    font-size: 2em;
+    font-family: 'Fira Code', 'Courier New', Courier, monospace;
 }
 
+.flex-form-container{
+    display: flex;
+    flex-direction: row;
+    width: 500px;
+    justify-content: space-around;
+    align-items: center;
+}
+.form-input{
+    height: 2em;
+    width: 15em;
+    border-radius: 0%;
+    border: none;
+    background-color: rgb(226, 212, 189);
+    /* border-color: lightgray; */
+}
+
+.form-btn{
+    height: 2em;
+    width: 3em;
+    border: none;
+    background-color: sandybrown;
+    border-color: lightgray;
+}
 .status{
-    margin-left: 60px;
+    /* margin-left: 50px; */
+    /* height: 2em; */
+    border-radius: 0%;
+    height: 2em;
+    border-color: lightgray;
     /* border: 1px red solid; */
 }
-
+.todo-items{
+   
+}
 .todoItem{
-    min-width: 100px;
+    list-style: none;
+    min-width: 500px;
     padding-right: 100px;
     background-color: lightgoldenrodyellow;
     border: 1px lightgrey solid;
+}
+
+.todo-complete{
+    background-color: rgb(90, 209, 94);
+}
+.todo-delete{
+    background-color: rgb(240, 71, 71);
+}
+.todo-complete, .todo-delete{
+    border: none;
+    margin: 0.5em;
+    width: 2em;
+    height: 2em;
+   
+}
+.todo-text{
+    justify-content: center;
+}
+.flex-todo-list{
+    color: royalblue;
+    font-family: 'Fira Code', 'Courier New', Courier, monospace;
+    font-size: 1.5em;
+    width: 25em;
+    margin: 2em
 }
 .completed{
     opacity: 0.5;
     text-decoration: line-through;
     color: red;
+}
+.flex-list{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    background-color: beige;
+    border: 1px grey solid;
+    margin: 0;
+    padding: 0;
 }
